# nrf52-blink-poc

./: Cargo.toml
src/: main.rs
